manifests/prd/java-simple-app.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: java-simple-app-prd
  namespace: microservice
  labels:
    app.kubernetes.io/instance: java-simple-app-node
    app.kubernetes.io/name: java-simple-app
spec:
  replicas: MIN_REPLICAS
  strategy:
    blueGreen: 
      activeService: java-simple-app-prd
      previewService: java-simple-app-prd-preview
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 120
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: java-simple-app-node
      app.kubernetes.io/name: java-simple-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: java-simple-app-node
        app.kubernetes.io/name: java-simple-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - java-simple-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: java-simple-app-prd
          image: IMAGE_VERSION
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: CPU_LIMIT
              memory: MEMORY_LIMIT
            requests:
              memory: MEMORY_REQUEST
              cpu: CPU_REQUEST
