manifests/prd/java-simple-app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/instance: java-simple-app-node
    app.kubernetes.io/name: java-simple-app
  name: java-simple-app-prd
  namespace: microservice
spec:
  rules:
  - host: microservice.example.com
    http:
      paths:
      - backend:
          service:
            name: java-simple-app-prd
            port:
              number: 80
        path: /business/product/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: java-simple-app-prd
            port:
              number: 80
        path: /business/product/swagger-ui
        pathType: ImplementationSpecific
